fixed the overlap in the courses.php

--- a/courses.css
+++ b/courses.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: sans-serif, serif;
     background-color: #FFF1DB;
